--- a/frontend/backup.html
+++ b/frontend/backup.html
@@ -34,8 +34,7 @@
                 </div>
                 <button id="download-backup" class="bg-indigo-600 text-white px-4 py-2 rounded"><i class="fas fa-download inline w-4 h-4 mr-2"></i>Download Backup</button>
 
-                <p class="mt-4">Export all transactions to a single OFX file.</p>
-                <button id="download-ofx" class="bg-indigo-600 text-white px-4 py-2 rounded"><i class="fas fa-file-export inline w-4 h-4 mr-2"></i>Download OFX</button>
+                <p class="mt-4">Need your transactions in another format? Visit the <a href="export.html" class="text-indigo-600 underline">Exports</a> page.</p>
             </section>
             <section class="bg-white p-6 rounded shadow space-y-4">
                 <h2 class="text-xl font-semibold">Restore Backup</h2>
