--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -61,7 +61,14 @@
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="groups.html"><i class="fas fa-layer-group mr-1"></i> Manage Groups</a></li>
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="segments.html"><i class="fas fa-chart-pie mr-1"></i> Manage Segments</a></li>
       </ul>
-    </div>
+  </div>
+
+  <div class="group">
+    <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Exports</h3>
+    <ul class="space-y-1 overflow-hidden max-h-0 transition-all duration-300">
+      <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="export.html"><i class="fas fa-file-export mr-1"></i> Export Data</a></li>
+    </ul>
+  </div>
 
   <div class="group">
     <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Admin Tools</h3>
