Add drilldown for pivot cells

--- a/frontend/pivot.html
+++ b/frontend/pivot.html
@@ -34,6 +34,14 @@
                 <div id="pivot-table" class="h-[80vh]"></div>
 
             </section>
+
+            <section id="detail-card" class="hidden space-y-4">
+                <div class="flex justify-between items-center">
+                    <h2 id="detail-title" class="text-xl font-semibold text-indigo-700"></h2>
+                    <button id="detail-close" class="text-gray-500 hover:text-gray-700"><i class="fas fa-times"></i></button>
+                </div>
+                <div id="detail-table" class="h-96"></div>
+            </section>
         </main>
     </div>
     <script src="js/menu.js"></script>
