--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -49,6 +49,13 @@
   </div>
 
   <div class="group">
+    <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Projects</h3>
+    <ul class="space-y-1 overflow-hidden max-h-0 transition-all duration-300">
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="projects.html"><i class="fas fa-screwdriver-wrench mr-1"></i> Projects</a></li>
+    </ul>
+  </div>
+
+  <div class="group">
     <h3 class="text-lg font-semibold text-gray-700 mb-2 cursor-pointer">Organise Data</h3>
     <ul class="space-y-1 overflow-hidden max-h-0 transition-all duration-300">
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="tags.html"><i class="fas fa-tags mr-1"></i> Manage Tags</a></li>
