--- a/frontend/projects.html
+++ b/frontend/projects.html
@@ -19,7 +19,7 @@
         <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Projects</h1>
         <p class="mb-4">Capture ideas for home projects, weigh their benefits and see which fit your budget.</p>
 
-        <section>
+        <section class="bg-white p-6 rounded shadow">
             <h2 class="text-xl font-semibold mb-4">Add Project</h2>
             <form id="project-form" class="grid md:grid-cols-2 gap-4">
                 <input type="hidden" id="project_id">
@@ -61,17 +61,19 @@
             </form>
         </section>
 
-        <section>
-            <h2 class="text-xl font-semibold mb-4">Budget Planning</h2>
-            <div class="flex items-end space-x-4">
-                <label class="block">Annual Budget (£)<br><input type="number" id="annual-budget" class="border p-2 rounded" data-help="Total funds available"></label>
-                <button id="apply-budget" class="bg-indigo-600 text-white px-4 py-2 rounded"><i class="fas fa-filter mr-1"></i>Apply Budget</button>
+        <section class="bg-white p-6 rounded shadow">
+            <h2 class="text-xl font-semibold mb-4">View Projects</h2>
+            <div class="mb-4">
+                <h3 class="text-lg font-semibold mb-2">Budget Planning</h3>
+                <div class="flex items-end space-x-4">
+                    <label class="block">Annual Budget (£)<br><input type="number" id="annual-budget" class="border p-2 rounded" data-help="Total funds available"></label>
+                    <button id="apply-budget" class="bg-indigo-600 text-white px-4 py-2 rounded"><i class="fas fa-filter mr-1"></i>Apply Budget</button>
+                </div>
             </div>
-        </section>
-
-        <section>
-            <h2 class="text-xl font-semibold mb-4">Project Priorities</h2>
-            <div id="projects-table"></div>
+            <div>
+                <h3 class="text-lg font-semibold mb-4">Project Priorities</h3>
+                <div id="projects-table"></div>
+            </div>
         </section>
     </main>
 </div>
