Add archived projects view

--- a/frontend/projects.html
+++ b/frontend/projects.html
@@ -87,6 +87,16 @@ async function loadProjects(){
                 {title:'Sustainability', field:'benefit_sustainability', hozAlign:'right'},
                 {title:'Funding', field:'funding_source'},
                 {title:'Score', field:'score', hozAlign:'right'},
+                {formatter:()=>'<i class="fas fa-box-archive w-4 h-4"></i>', width:40, hozAlign:'center', cellClick:async(e,cell)=>{
+                    const id = cell.getRow().getData().id;
+                    await fetch('../php_backend/public/projects.php',{
+                        method:'PATCH',
+                        headers:{'Content-Type':'application/json'},
+                        body:JSON.stringify({id, archived:1})
+                    });
+                    loadProjects();
+                    showMessage('Project archived');
+                }},
                 {formatter:()=>'<i class="fas fa-trash w-4 h-4"></i>', width:40, hozAlign:'center', cellClick:async(e,cell)=>{
                     if(!confirm('Delete this project?')) return;
                     const id = cell.getRow().getData().id;
