Add global aria-label tooltips for action icons

--- a/frontend/budgets.html
+++ b/frontend/budgets.html
@@ -107,7 +107,7 @@ async function loadBudgets(){
                 {title:'Budget',field:'amount',formatter:'money',formatterParams:{symbol:'£',precision:2},hozAlign:'right'},
                 {title:'Spent',field:'spent',formatter:'money',formatterParams:{symbol:'£',precision:2},hozAlign:'right'},
                 {title:'Left',field:'left',formatter:'money',formatterParams:{symbol:'£',precision:2},hozAlign:'right'},
-                {formatter:()=>'<i class="fas fa-trash w-4 h-4"></i>',width:40,hozAlign:'center',cellClick:async(e,cell)=>{
+                {formatter:()=>'<i class="fas fa-trash w-4 h-4" aria-label="Delete"></i>',width:40,hozAlign:'center',cellClick:async(e,cell)=>{
                     if(!confirm('Delete this budget?')) return;
                     const id=cell.getRow().getData().id;
                     await fetch('../php_backend/public/budgets.php',{
